force-app/main/default/objects/Timesheet_Settings__c/Timesheet_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings object for timesheet calendar</description>
    <label>Timesheet</label>
</CustomObject>