force-app/main/default/objects/Timesheet_Settings__c/fields/Billable_Event_Colour__c.field-meta.xml
<CustomField>
    <fullName>Billable_Event_Colour__c</fullName>
    <description>Custom colour setting for billable time entries</description>
    <label>Billable Event Colour</label>
    <length>10</length>
    <type>Text</type>
</CustomField>