force-app/main/default/objects/Timesheet_Settings__c/fields/Default_Event_Colour__c.field-meta.xml
<CustomField>
    <fullName>Default_Event_Colour__c</fullName>
    <description>Default custom colour setting for calendar events</description>
    <label>Default Event Colour</label>
    <length>10</length>
    <type>Text</type>
</CustomField>