force-app/main/default/objects/Timesheet_Settings__c/fields/Draft_Event_Colour__c.field-meta.xml
<CustomField>
    <fullName>Draft_Event_Colour__c</fullName>
    <description>Custom colour setting for draft time entries</description>
    <label>Draft Event Colour</label>
    <length>10</length>
    <type>Text</type>
</CustomField>