force-app/main/default/objects/Timesheet_Settings__c/fields/Draft_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Draft_Project_Name__c</fullName>
    <description>Default project name when creating time entries in calendar, if a work item is not provided</description>
    <label>Draft Project Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>