force-app/main/default/objects/Timesheet_Settings__c/fields/Non_Billable_Event_Colour__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Event_Colour__c</fullName>
    <description>Custom colour setting for non-billable time entries</description>
    <label>Non-Billable Event Colour</label>
    <length>10</length>
    <type>Text</type>
</CustomField>