force-app/main/default/objects/Timesheet_Settings__c/fields/Week_First_Hour__c.field-meta.xml
<CustomField>
    <fullName>Week_First_Hour__c</fullName>
    <description>First hour for custom timesheet calendar</description>
    <label>Week First Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>